gcc/testsuite/gm2/errors/fail/badabs.mod
MODULE badabs ;

VAR
   c: CARDINAL ;
BEGIN
   c := ABS (foo)
END badabs.
